# google-adk-to-aws-deploy-template

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py  requirements.txt
app/agents/: data_retrieval_agent.py  orchestrator.py  preprocessing_agent.py  response_agent.py
app/tools/: athena_query_tool.py  python_preprocess_tool.py
docs/: architecture.md  cost-optimization.md  security.md
infra/floci/: docker-compose.yml
infra/sam/: local-env.example.json  samconfig.toml  template.yaml
infra/terraform/: athena.tf  iam.tf  lambda_api.tf  main.tf  outputs.tf  providers.tf  s3_tables.tf  variables.tf
tests/integration/: test_local_api_e2e.py
tests/unit/: test_athena_query_tool.py  test_main.py  test_orchestrator.py  test_preprocess_tool.py
