[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "strands-aws-template-tests"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.0",
    "boto3>=1.34.0",
    "strands-agents>=1.42.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
